[package]
name = "borgman"
version = "0.1.0"
authors = ["j"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
env_logger = "0.7.1"
error-chain = "0.12.2"
log = "0.4"
